# Gemini-FastAPI

./: .gitignore  Dockerfile  README.md  README.zh.md  config.yaml  docker-compose.yml  env.example  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker.yaml  ruff.yaml
app/: main.py
app/models/: __init__.py  models.py
app/server/: chat.py  health.py  middleware.py
app/services/: __init__.py  client.py  lmdb.py
app/utils/: config.py  helper.py  logging.py  utils.py
cache/: .cached_1psidts_g.a0003Aj7diAcWIlH23t4oXVKor7N7b1FopaWZGa1Zv4hUkL7c9YQWM3bBL5LkhK_d1LAP4JJUAACgYKAXMSARYSFQHGX2MiICp3gVNL7zU8GS3lhOjUyxoVAUF8yKoj6VaNw8SqJhRhbaInEOW-0076.txt
config/: config.yaml
